2006-10-08  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib/_Location.py (set_county, get_county): Move into
	LocationBase class.
	* src/RelLib/_LocationBase.py (set_county, get_county): Move from
	Location class.

2006-10-07  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditSourceRef.py (_cleanup_on_exit): Factor out
	cleanup into its own method (as in the parent class).
	FIXME: This needs to be fixed so that _cleanup_on_exit is not
	run on OK, only on cancel. Maybe we need _clean_up_on_cancel() ?
	* src/DisplayTabs/_TextTab.py (cancel): Only reset text, not the
	whole source reference.
	* src/plugins/BookReport.py (BookList.parse): Catch ValueError
	exception (coming from urllib2).
	* src/LdsUtils.py (temples): Correct code for San Antonio.
	* src/GrampsDb/_WriteGedcom.py
	(GedcomWriterOptionBox.get_option_box): Add custom filters to the
	filter list.
	* data/grampsxml.dtd: Update DTD for XML 1.1.3.
	* data/grampsxml.rng: Update schema for XML 1.1.3.
	* src/GrampsDb/_ReadXML.py (stop_county): Read county.
	* src/GrampsDb/_WriteXML.py (write_address_list): Write county.

2006-10-06  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PluginUtils/_Plugins.py: ignore pressing apply without
	a plugin being selected
	* src/plugins/SoundGen.py: Dont fail with empty database

2006-10-06  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_WriteXML.py (write_data_map): Escape special chars
	in key/value pairs;
	(dump_location): Remove debug output.
	* src/GrampsDb/_GrampsBSDDB.py (load): Do not create logs when TXN
	is disabled;
	(gramps_upgrade_9): Include upgrade_11 steps into upgrade_9.
	* src/GrampsDb/_GrampsBSDDB.py: More upgrade fixes.

2006-10-05  Alex Roitman  <shura@gramps-project.org>
	* src/DataViews/_PersonView.py (set_inactive): Check active status.
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_11): Upgrade
	addresses in repositories.
	* src/Config/_GrampsConfigKeys.py: Regenerate file (proper type
	for transactions key).
