@@ -1,3 +1,9 @@
+2006-10-08  Don Allingham  <don@gramps-project.org>
+	* src/Editors/_EditReference.py: call cancel_and_close on window
+	cancel
+	* src/DisplayTabs/_SourceRefModel.py: remove debug 
+	* src/DisplayTabs/_EmbeddedList.py: remove debug 
+
 2006-10-08  Alex Roitman  <shura@gramps-project.org>
 	* src/RelLib/_Location.py (set_county, get_county): Move into
 	LocationBase class.
